frontend/tests/cases/negative/caseOnIndexed.gr
import Vec
import Prelude

isEmpty : ∀ {n : Nat} . Vec n Int → Bool
isEmpty xs =
    case xs of
      Nil        → True;
      (Cons _ _) → False
